--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Test Version</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test Version</title>
+  </head>
+  <body>
+    <h1>Test Version</h1>
+  </body>
+</html>
